--- a/my-portofolio/src/styles/components/projects.css
+++ b/my-portofolio/src/styles/components/projects.css
@@ -5,6 +5,7 @@
 
 .projects-section img {
   left: 0;
+  max-width: 100%;
 }
 
 .projects-section h3 {
