--- a/my-portofolio/src/styles/components/toolsAndSkills.css
+++ b/my-portofolio/src/styles/components/toolsAndSkills.css
@@ -6,6 +6,7 @@
 .tools-and-skills img {
   left: 0;
   user-select: none;
+  max-width: 100%;
 }
 
 .tools-and-skills h3 {
